# crabchat

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  tailwind.config.js  tailwind.sh
assets/: tailwind.css
assets/styling/: globals.css  main.css  style.css
src/: client.rs  main.rs
src/components/: chat.rs  header.rs  hero.rs  home.rs  login.rs  mod.rs  nav.rs  room_card.rs
src/components/cards/: message_card.rs  mod.rs  room_card.rs
src/infra/: enums.rs  models.rs
src/providers/: mod.rs
src/room/: mod.rs
src/services/: client.rs
src/temp/client/: mod.rs
