[package]
name = "crabchatserver"
version = "0.1.0"
edition = "2024"

[dependencies]
#dioxus
dioxus = { version = "0.6.0", features = [] }
dioxus-free-icons = { version = "0.9", features = ["lucide"] }
dioxus-toast = "0.6.0"
# others
tokio = { version = "1", features = ["full"] }
tungstenite = "0.26.2"
tokio-tungstenite = "0.26.2"
futures-util = "0.3"
anyhow = "1.0.98"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.4"

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
